# meshcore_sim

./: BUILDSCRIPT_COLLISIONS.sh  PLAN.md  README.md
experiments/: __init__.py  __main__.py  compare.py  runner.py  scenarios.py
orchestrator/: __main__.py  airtime.py  channel.py  cli.py  config.py  metrics.py  node.py  router.py  topology.py  tracer.py
privatemesh/: CMakeLists.txt  README.md
privatemesh/nexthop/: CMakeLists.txt  README.md  SimNode.cpp
sim_tests/: __init__.py  __main__.py  helpers.py  test_adversarial.py  test_airtime.py  test_config.py  test_cpp_suite.py  test_integration_smoke.py  test_metrics.py  test_node_agent.py  test_topology.py
tools/: fetch_topology.py
topologies/: asymmetric_hill.json  grid_10x10.json
viz/: app.py
